k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: shop-deployment
  namespace: shop-ns
  labels:
    app: shop
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      name: shop-pod
      labels:
        app: shop
    spec:
      containers:
      - name: shop-app
        image: raman20260/online_shopping_app:latest
        ports:
        - containerPort: 80     
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:  
            cpu: 200m
            memory: 256Mi
