k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: shop-svc
  namespace: shop-ns
spec:
  selector:
    app: shop
  ports:
    - protocol: TCP
      port: 80 # cluster/svc port
      targetPort: 80 # pod/container port
