k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: shop-ing
  namespace: shop-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
      - pathType: Prefix
        path: /shop
        backend:
          service:
            name: shop-svc
            port:
              number: 80
